[gd_scene load_steps=5 format=3 uid="uid://dust1y0r170t7"]

[ext_resource type="Script" path="res://nodes/scenes/map_scene.gd" id="1_xk433"]
[ext_resource type="PackedScene" uid="uid://1xt8ttogo0t7" path="res://nodes/utils/centering.tscn" id="2_it4uu"]
[ext_resource type="PackedScene" uid="uid://b3ygu6pkadmsm" path="res://nodes/objects/note_frame.tscn" id="3_l0kpi"]
[ext_resource type="PackedScene" uid="uid://djcbvrojlng0" path="res://nodes/utils/metronome.tscn" id="4_flohd"]

[node name="MapScene" type="Node2D"]
script = ExtResource("1_xk433")

[node name="Centering" parent="." instance=ExtResource("2_it4uu")]

[node name="NoteFrame" parent="Centering" instance=ExtResource("3_l0kpi")]
speed = null
beat_line_manual = null
beat_line = false

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="Back" type="Button" parent="."]
offset_left = 20.0
offset_top = 20.0
offset_right = 65.0
offset_bottom = 51.0
text = "Back"

[node name="Timeline" type="HSlider" parent="."]
offset_left = 21.0
offset_top = 57.0
offset_right = 511.0
offset_bottom = 73.0
size_flags_horizontal = 3

[node name="AudioSourcePath" type="LineEdit" parent="."]
offset_left = 20.0
offset_top = 83.0
offset_right = 447.0
offset_bottom = 114.0
text = "res://res/demo1.wav"
placeholder_text = "Audio Stream Source"

[node name="LoadAudio" type="Button" parent="."]
offset_left = 450.0
offset_top = 82.0
offset_right = 496.0
offset_bottom = 113.0
text = "Load"

[node name="PlayPause" type="Button" parent="."]
offset_left = 361.0
offset_top = 22.0
offset_right = 510.0
offset_bottom = 53.0
text = "Play/Pause (Enter)
"

[node name="LoadedAudioStreamPath" type="Label" parent="."]
offset_left = 20.0
offset_top = 118.0
offset_right = 236.0
offset_bottom = 141.0
text = "(Loaded Audio Stream Path)"

[node name="Metronome" parent="." instance=ExtResource("4_flohd")]

[node name="TapBPMButton" type="Button" parent="."]
offset_left = 537.0
offset_top = 22.0
offset_right = 613.0
offset_bottom = 53.0
disabled = true
text = "Tap BPM (B)"

[node name="TapBPMInfo" type="Label" parent="."]
offset_left = 537.0
offset_top = 59.0
offset_right = 646.0
offset_bottom = 82.0
text = "0 BPM, 0.0ms"

[node name="MetronomeOn" type="CheckBox" parent="."]
offset_left = 83.0
offset_top = 20.0
offset_right = 203.0
offset_bottom = 51.0
button_pressed = true
text = "Metronome"

[node name="ChartSourcePath" type="LineEdit" parent="."]
offset_left = 20.0
offset_top = 155.0
offset_right = 392.0
offset_bottom = 186.0
text = "res://res/demo1.json"
placeholder_text = "Chart Path"

[node name="LoadChart" type="Button" parent="."]
offset_left = 450.0
offset_top = 154.0
offset_right = 496.0
offset_bottom = 185.0
text = "Load"

[node name="LoadedChartPath" type="Label" parent="."]
offset_left = 20.0
offset_top = 190.0
offset_right = 236.0
offset_bottom = 213.0
text = "(Loaded Chart Path)"

[node name="CreateNotes" type="CheckBox" parent="."]
offset_left = 19.0
offset_top = 227.0
offset_right = 148.0
offset_bottom = 258.0
text = "Create Notes"

[node name="CreateNoteCoverage" type="HSlider" parent="."]
offset_left = 309.0
offset_top = 236.0
offset_right = 444.0
offset_bottom = 252.0
max_value = 20.0
value = 4.0

[node name="CreateNoteCoverageLabel" type="Label" parent="."]
offset_left = 453.0
offset_top = 231.0
offset_right = 493.0
offset_bottom = 254.0
text = "4"

[node name="SaveChart" type="Button" parent="."]
offset_left = 398.0
offset_top = 154.0
offset_right = 444.0
offset_bottom = 185.0
text = "Save"

[node name="ChartRawEdit" type="TextEdit" parent="."]
offset_left = 22.0
offset_top = 367.0
offset_right = 233.0
offset_bottom = 624.0

[node name="CreateLongNotes" type="CheckBox" parent="."]
offset_left = 19.0
offset_top = 261.0
offset_right = 190.0
offset_bottom = 292.0
text = "Create Long Notes"

[node name="RemoveNotes" type="CheckBox" parent="."]
offset_left = 19.0
offset_top = 296.0
offset_right = 190.0
offset_bottom = 327.0
text = "Remove Notes"

[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_audio_stream_player_finished"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="drag_started" from="Timeline" to="." method="_on_timeline_drag_started"]
[connection signal="pressed" from="LoadAudio" to="." method="_on_load_audio_pressed"]
[connection signal="pressed" from="PlayPause" to="." method="_on_play_pause_pressed"]
[connection signal="pressed" from="TapBPMButton" to="." method="_on_tap_bpm_button_pressed"]
[connection signal="pressed" from="MetronomeOn" to="." method="_on_metronome_on_pressed"]
[connection signal="pressed" from="LoadChart" to="." method="_on_load_chart_pressed"]
[connection signal="changed" from="CreateNoteCoverage" to="." method="_on_create_note_coverage_changed"]
[connection signal="value_changed" from="CreateNoteCoverage" to="." method="_on_create_note_coverage_value_changed"]
[connection signal="pressed" from="SaveChart" to="." method="_on_save_chart_pressed"]
[connection signal="focus_exited" from="ChartRawEdit" to="." method="_on_chart_raw_edit_focus_exited"]
